# Document-Intelligence-Refinery-Agentic-Pipeline

./: .gitignore  DOMAIN_NOTES.md  README.md  app.py  pyproject.toml
.refinery/: extraction_ledger.jsonl  facts.db  facttable_stats.json  vector_store_stats.json
.refinery/pageindex/: 5a2b251e5b1df5d1_pageindex.json  audit_report_-_2023_pageindex.json  b439337d730bbadf_pageindex.json  bafb845284507188_pageindex.json  cbe_annual_report_2023-24_pageindex.json  e0caede12d76f06d_pageindex.json  fta_performance_survey_final_rep_pageindex.json  tax_expenditure_ethiopia_2021_22_pageindex.json
.refinery/profiles/: 5a2b251e5b1df5d1.json  b439337d730bbadf.json  bafb845284507188.json  e0caede12d76f06d.json
.refinery/qa_pairs/: all_qa_pairs.json  audit_report_-_2023_qa_pairs.json  cbe_annual_report_2023_24_qa_pairs.json  fta_performance_survey_final_rep_qa_pairs.json  tax_expenditure_ethiopia_2021_22_qa_pairs.json
.refinery/vector_store/72ae5626-ebad-4e91-8db8-196c8864fa05/: index_metadata.pickle
doc/docs/: Interim_Report.md
docs/: interim_report.md
rubric/: extraction_rules.yaml  extraction_rules.yml
scripts/: analyze_corpus.py  create_extraction_ledger.py  extraction_ledger.jsonl  fix_query_agent.py  generate_qa_pairs.py  profile_all_corpus.py  save_pageindex_jsons.py  test_all_corpus.py  test_extraction.py  test_output.py  verify_vector_store.py
src/agents/: chunker.py  config.py  embedder.py  extractor.py  fact_extractor.py  indexer.py  llm_answerer.py  query_agent.py  triage.py  validator.py
src/graphs/: query_graph.py
src/models/: __init__.py  document_profile.py  extracted_document.py  ldu.py  page_index.py  provenance.py
src/strategies/: fast_text.py  layout_aware.py  vision_augmented.py
tests/: test_chunker.py  test_extractor.py  test_indexer.py  test_query_agent.py  test_triage.py
