[project]
name = "document-refinery"
version = "0.1.0"
description = "The Document Intelligence Refinery"
authors = [
    {name = "Addisu-Taye",email = "addtaye@gmail.com"}
]
license = {text = "MIT"}
requires-python =">=3.11,<4.0"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "pdfplumber (>=0.11.9,<0.12.0)",
    "pymupdf (>=1.27.1,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "langgraph (>=1.0.10,<2.0.0)",
    "chromadb (>=1.5.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
